update section header

--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
   <div class="row">
     <div class="portfolio-wrapper">
       <div class="col">
+        <h2><i class="icon-desktop"></i>Reinforcement Learning</h2>
+        <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
+      </div>
+      <div class="col">
+        <h2><i class="icon-star"></i>Developer Student Clubs</h2>
+        <p>Over the Summer, I worked as a Data Engineering intern on the Robotic Process Automation team at the Royal Bank of Canada (RBC) doing research and implementation of tools using Natural Lanugage Processing. I built a semantic search engine that performed document clustering, input tokenization, skip-grams and n-grams, and relevant document extraction. This project went end-to-end through the development pipeline, from research to production.</p>
+      </div>
+      <div class="col m-first">
+        <h2><i class="icon-camera"></i>Quant trading and Embedded</h2>
+        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in non-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
+      </div>
+      <div class="col">
         <h2><i class="icon-desktop"></i>Autonomous Driving</h2>
         <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
       </div>
