--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             		<a href="https://www.instagram.com/janeillario/?hl=en"><i class="fa fa-instagram fa-3x"></i></a>
             		<a href="https://github.com/janeillario"><i class="fa fa-github-square fa-3x"></i></a>
             		<a href="https://www.linkedin.com/in/janeillarionova/"><i class="fa fa-linkedin-square fa-3x"></i></a>
-            		<a href="assets/Illarionova_Jane.pdf"><i class="fa fa-file-text fa-3x"></i></a>
+            		<a href="assets/Illarionova_Jane2021.pdf"><i class="fa fa-file-text fa-3x"></i></a>
             	</div>
 				<br><br><br><br><br><br>
 	 
@@ -133,17 +133,17 @@
     <div class="portfolio-wrapper">
       <div class="col">
         <h2><i class="icon-desktop"></i>Reinforcement Learning</h2>
-        <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
+        <p>Working with the Machine Learning team of the RBC trading floor to build a Reinforcement Learning algo for trading. Using pytorch for research and development of novel ML techniques and their application within our agent. RL allows the agent to adapt its trading decisions based on the most current and relevant movements and trends in the market, outperfoming conventional algorithmic trading methods.</p>
       </div>
       <div class="col">
         <h2><i class="icon-star"></i>Developer Student Clubs</h2>
-        <p>Over the Summer, I worked as a Data Engineering intern on the Robotic Process Automation team at the Royal Bank of Canada (RBC) doing research and implementation of tools using Natural Lanugage Processing. I built a semantic search engine that performed document clustering, input tokenization, skip-grams and n-grams, and relevant document extraction. This project went end-to-end through the development pipeline, from research to production.</p>
-      </div>
-      <div class="col m-first">
-        <h2><i class="icon-camera"></i>Quant trading and Embedded</h2>
-        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in non-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
+        <p>I started a Developer Student Club on my campus, creating the first Toronto chapter of this global teaching initiative. DSCs are university based community groups for students supported by Google Developers nad  Google developer technologies. Students from all programs with an interest in growing as a developer are welcome. By joining a DSC, students grow their knowledge in a peer-to-peer, hands-on learning environment and build solutions for their community.</p>
       </div>
       <div class="col">
+        <h2><i class="icon-camera"></i>Quant trading and Embedded</h2>
+        <p>I worked at IMC trading in Chicago to develop a high-performance component in the order execution architecture; combinging elegant C++, FPGA Control, and TCP Networking my teammate and I built a menas for optimizing trade execution and extending the functionality of the trade inbound connection.</p>
+      </div>
+      <div class="col m-first">
         <h2><i class="icon-desktop"></i>Autonomous Driving</h2>
         <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
       </div>
