--- a/index.html
+++ b/index.html
@@ -141,9 +141,16 @@
       </div>
       <div class="col">
         <h2><i class="icon-camera"></i>Quant trading and Embedded</h2>
-        <p>I worked at IMC trading in Chicago to develop a high-performance component in the order execution architecture; combinging elegant C++, FPGA Control, and TCP Networking my teammate and I built a menas for optimizing trade execution and extending the functionality of the trade inbound connection.</p>
+        <p>I worked at IMC trading in Chicago to develop a high-performance component in the order execution architecture; combinging elegant C++, FPGA Control, and TCP Networking my teammate and I built a menas for optimizing trade execution and extending the functionality of the trade inbound connection.
+        <br>
+        <br>
+        <br>
+        <br><br>
+        <br><br>
+        <br>
+        </p>
       </div>
-      <div class="col m-first">
+      <div class="col first">
         <h2><i class="icon-desktop"></i>Autonomous Driving</h2>
         <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
       </div>
@@ -153,7 +160,7 @@
       </div>
       <div class="col m-first">
         <h2><i class="icon-camera"></i>Civitas Tech</h2>
-        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in non-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
+        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in non-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city.</p>
       </div>
       <div class="col first">
         <h2><i class="icon-globe"></i>brAIn team</h2>
