--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#index">Home</a></li>
             <li><a href="#intro">Introduction</a></li>
             <li><a href="#portfolio">Things I Do</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#index">Contact</a></li>
           </ul>
         </nav>
       </div>
