update twitter link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<br>
 				<!-- <br> -->
 				<div class="social-icons">
-	                <a href="https://twitter.com/IllarionovaJane"><i class="fa fa-twitter-square fa-3x"></i></a>
+	                <a href="https://twitter.com/JaneIllarionova"><i class="fa fa-twitter-square fa-3x"></i></a>
             		<a href="https://www.instagram.com/janeillario/?hl=en"><i class="fa fa-instagram fa-3x"></i></a>
             		<a href="https://github.com/janeillario"><i class="fa fa-github-square fa-3x"></i></a>
             		<a href="https://www.linkedin.com/in/janeillarionova/"><i class="fa fa-linkedin-square fa-3x"></i></a>
